# WS-1.3

./: .gitignore  README.md
00-❗libraries/WS_QMI8658/: WS_QMI8658.cpp
00-❗libraries/lvgl_setup/: lvgl_setup.h
01-Prism Clock with Moon Phase/PIO-1.3/: README.md  platformio.ini
01-Prism Clock with Moon Phase/PIO-1.3/boards/: WS-ESP32-S3-LCD-1-3.json
01-Prism Clock with Moon Phase/PIO-1.3/include/: lv_conf.h
01-Prism Clock with Moon Phase/PIO-1.3/lib/ui/src/: CMakeLists.txt  filelist.txt  ui.c  ui.h
01-Prism Clock with Moon Phase/PIO-1.3/lib/ui/src/fonts/: ui_font_IBM20.c  ui_font_IBM70.c
01-Prism Clock with Moon Phase/PIO-1.3/lib/ui/src/images/: ui_img_moon_phase_moon_frame_00002_png.c  ui_img_moon_phase_moon_frame_00005_png.c  ui_img_moon_phase_moon_frame_00007_png.c  ui_img_moon_phase_moon_frame_00012_png.c  ui_img_moon_phase_moon_frame_00014_png.c  ui_img_moon_phase_moon_frame_00017_png.c  ui_img_moon_phase_moon_frame_00018_png.c  ui_img_moon_phase_moon_frame_00019_png.c  ui_img_moon_phase_moon_frame_00021_png.c  ui_img_moon_phase_moon_frame_00025_png.c  ui_img_moon_phase_moon_frame_00026_png.c
01-Prism Clock with Moon Phase/PIO-1.3/lib/ui/src/screens/: ui_ScreenLoading.c  ui_Screen_MoonPhase.c  ui_Screen_Time.c
01-Prism Clock with Moon Phase/PIO-1.3/src/: MoonPhaseManager.cpp  MoonPhaseManager.h  TimeManager.cpp  TimeManager.h  WiFiManager.cpp  WiFiManager.h  config.h  main.cpp  pixel_refresh.cpp  pixel_refresh.h
01-Prism Clock with Moon Phase/SLS/: SquareLine_Project.sll  SquareLine_Project.spj
01-Prism Clock with Moon Phase/SLS/Template/SquareLine_Project/: README.md  platformio.ini
01-Prism Clock with Moon Phase/SLS/Template/SquareLine_Project/include/: lv_conf.h
01-Prism Clock with Moon Phase/SLS/Template/SquareLine_Project/ui/: ui.ino
01-Prism Clock with Moon Phase/SLS/assets/Fonts/: ui_font_IBM110.c  ui_font_IBM110.fcfg  ui_font_IBM170.fcfg  ui_font_IBM20.fcfg  ui_font_IBM25.c  ui_font_IBM25.fcfg  ui_font_IBM45.fcfg  ui_font_IBM70.fcfg
(+31 files in other folders)
